--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    margin:0px;
+    padding:0px;
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+html,body{
+    overflow-x:hidden;
+}
+
+body{
+    min-height: 100vh;
+    position: relative;
+    padding-bottom:100px;
+}
+
+#root{
+    text-align: center;
+}
+
+.header{
+    height:80px;
+    background-color: aqua;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.memes{
+    margin-top:20px;
+}
+
+.meme{
+    width:50vw;
+    margin:20px auto;
+    height:500px;
+    position: relative;
+}
+
+.meme img{
+    width:100%;
+    height:100%;
+}
+
+.footer{
+    height:80px;
+    background-color: aqua;
+    position: absolute;
+    bottom:0px;
+    left:0px;
+    width:100%;
 }
